Fix implementation to work with simulation framework and lower Java version